--- a/src/app/servicios/servicios.component.html
+++ b/src/app/servicios/servicios.component.html
@@ -16,7 +16,7 @@
                     [class.btn-success]="!isInCart(servicio.id)"
                     [class.btn-danger]="isInCart(servicio.id)"
                     [disabled]="!currentUserUid">
-              {{ isInCart(servicio.id) ? 'Quitar del carrito' : 'Añadir al carrito' }}
+              {{ isInCart(servicio.id) ? 'Quitar del Carrito' : 'Añadir al Carrito' }}
             </button>
           </div>
         }
@@ -39,7 +39,7 @@
                     [class.btn-success]="!isInCart(servicio.id)"
                     [class.btn-danger]="isInCart(servicio.id)"
                     [disabled]="!currentUserUid">
-              {{ isInCart(servicio.id) ? 'Quitar del carrito' : 'Añadir al carrito' }}
+              {{ isInCart(servicio.id) ? 'Quitar del Carrito' : 'Añadir al Carrito' }}
             </button>
           </div>
         }
@@ -63,7 +63,7 @@
                     [class.btn-success]="!isInCart(servicio.id)"
                     [class.btn-danger]="isInCart(servicio.id)"
                     [disabled]="!currentUserUid">
-              {{ isInCart(servicio.id) ? 'Quitar del carrito' : 'Añadir al carrito' }}
+              {{ isInCart(servicio.id) ? 'Quitar del Carrito' : 'Añadir al Carrito' }}
             </button>
           </div>
         }
