--- a/src/app/servicios/servicios.component.css
+++ b/src/app/servicios/servicios.component.css
@@ -52,14 +52,17 @@
 
 /* Estilos para cada tarjeta de servicio */
 .servicio-card {
+  width: 90%;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between; /* Empuja el botón al final */
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.08);
   padding: 15px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* Empuja el botón al final */
+
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
   height: auto; /* Permite que la altura se ajuste al contenido */
 }
@@ -71,7 +74,8 @@
 
 .servicio-card img {
   max-width: 100%;
-  height: 120px; /* Ajusta esta altura para que las imágenes sean más pequeñas */
+  width: 100px;
+  height: auto; /* Ajusta esta altura para que las imágenes sean más pequeñas */
   object-fit: cover; /* Recorta la imagen para llenar el espacio */
   border-radius: 4px;
   margin-bottom: 10px;
@@ -144,16 +148,18 @@
   align-items: center;
   position: sticky; /* Sticky o fixed si quieres que siempre esté visible */
   bottom: 20px; /* Distancia desde el fondo */
-  left: 0;
-  right: 0;
-  width: fit-content; /* Se ajusta al contenido */
-  margin: 40px auto 0 auto; /* Centrar y margen superior */
+  left: unset;
+  right: 20;
+  margin-left: auto; /* Empuja el elemento hacia la derecha */
+  width: fit-content; /* Se ajusta al contenido. Es importante para que margin-left: auto funcione correctamente */
   box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.2);
+  z-index: 1000; /* Asegura que esté por encima de otros elementos */
 }
 
 .cart-summary h3 {
   margin: 0;
-  font-size: 1.2rem;
+  margin-right: 10px;
+  font-size: 1.1rem;
 }
 
 .cart-summary button {
@@ -164,6 +170,7 @@
   border-radius: 5px;
   cursor: pointer;
   font-size: 1rem;
+  font-weight: bold;
   transition: background-color 0.2s ease-in-out;
 }
 
