--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,6 +15,7 @@
       <li><a routerLink="/extras" (click)="closeMenu()">Extras</a></li>
       <li><a routerLink="/contacto" (click)="closeMenu()">Contacto</a></li>
       <li *ngIf="isLoggedIn"><a routerLink="/servicios" (click)="closeMenu()">Servicios</a></li>
+      <li *ngIf="isLoggedIn"><a routerLink="/agenda" (click)="closeMenu()">Agendas</a></li>
       <!-- <li><a routerLink="/servicios" (click)="closeMenu()">Servicios</a></li> -->
 
       <ul class="grupo_btn">
