--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -48,10 +48,7 @@
              [max]="maxDate">
       <mat-hint>MM/DD/YYYY</mat-hint>
       <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker
-                      [dateClass]="dateClass"
-                      [startAt]="startAt">
-      </mat-datepicker>
+      <mat-datepicker #picker [dateClass]="dateClass" [startAt]="startAt"></mat-datepicker>
     </mat-form-field>
   </div>
 
