--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,41 +10,45 @@
   <div class="collapse navbar-collapse" id="navbarNav" [ngClass]="{'show': isMenuOpen}">
     <ul>
       <li><a routerLink="/" (click)="closeMenu()">Inicio</a></li>
-      <!-- <li><a routerLink="/cumpleanos" (click)="closeMenu()">Cumpleaños</a></li>
-      <li><a routerLink="/casamientos" (click)="closeMenu()">Casamientos</a></li>
-      <li><a routerLink="/extras" (click)="closeMenu()">Extras</a></li> -->
       <li><a routerLink="/nosotros" (click)="closeMenu()">Nosotros</a></li>
       <li><a routerLink="/contacto" (click)="closeMenu()">Contacto</a></li>
-      <li *ngIf="isLoggedIn"><a routerLink="/servicios" (click)="closeMenu()">Servicios</a></li>
-      <li *ngIf="isLoggedIn"><a routerLink="/agenda" (click)="closeMenu()">Agendas</a></li>
-      <li *ngIf="isLoggedIn"><a routerLink="/perfil" (click)="closeMenu()">Perfil</a></li>
-      <!-- <li><a routerLink="/servicios" (click)="closeMenu()">Servicios</a></li> -->
+
+      @if (isLoggedIn) {
+        <li><a routerLink="/servicios" (click)="closeMenu()">Servicios</a></li>
+        <li><a routerLink="/agenda" (click)="closeMenu()">Agendas</a></li>
+        <li><a routerLink="/perfil" (click)="closeMenu()">Perfil</a></li>
+      }
 
       <ul class="grupo_btn">
-        <li  *ngIf="loggedIn" class="botones">
-          <span class="welcome">Bienvenido: {{ loggedIn }}</span>
-        </li>
-        <li  *ngIf="loggedIn" class="botones">
-          <button class=" auth-button logout-button" (click)="logout()">Cerrar Sesión</button>
-        </li>
-        <li *ngIf="loggedIn">
-          <a routerLink="/carrito" (click)="closeMenu()">
-            <i class="fas fa-shopping-cart fa-2x"></i></a>
-        </li>
-        <li  *ngIf="!loggedIn" class="botones">
-          <button class="auth-button" (click)="openLoginModal()">Iniciar Sesión</button>
-        </li>
-        <li  *ngIf="!loggedIn" class="botones">
-          <button class="auth-button" (click)="openRegisterModal()">Registrarse</button>
-        </li>
+        @if (loggedIn) {
+          <li class="botones">
+            <span class="welcome">Bienvenido: {{ loggedIn }}</span>
+          </li>
+          <li class="botones">
+            <button class=" auth-button logout-button" (click)="logout()">Cerrar Sesión</button>
+          </li>
+          <li>
+            <a routerLink="/carrito" (click)="closeMenu()">
+              <i class="fas fa-shopping-cart fa-2x"></i></a>
+          </li>
+        }
+
+        @if (!loggedIn) {
+          <li class="botones">
+            <button class="auth-button" (click)="openLoginModal()">Iniciar Sesión</button>
+          </li>
+          <li class="botones">
+            <button class="auth-button" (click)="openRegisterModal()">Registrarse</button>
+          </li>
+        }
       </ul>
 
     </ul>
   </div>
   <app-login-modal
-  #loginModal
-  (closeModalEvent)="closeLoginModal()"
-  (openRegisterModalEvent)="openRegisterModal()">
+    #loginModal
+    (closeModalEvent)="closeLoginModal()"
+    (openRegisterModalEvent)="openRegisterModal()">
   </app-login-modal>
 
   <app-register-modal
