--- a/src/app/tarjetas/tarjetas.component.html
+++ b/src/app/tarjetas/tarjetas.component.html
@@ -1,6 +1,6 @@
 <div class="tarjetas-container">
   <div class="tarjeta">
-    <a [routerLink]="['/cumpleanos']" class="tarjeta-enlace">
+    <a [routerLink]="['/servicios', 'cumpleanos']" class="tarjeta-enlace">
       <div class="tarjeta-fondo">
         <picture class="tarjeta-fondo-picture">
           <source srcset="assets/img/cumple.avif" type="image/avif">
@@ -14,7 +14,7 @@
   </div>
 
   <div class="tarjeta">
-    <a [routerLink]="['/casamientos']" class="tarjeta-enlace">
+    <a [routerLink]="['/servicios', 'casamientos']" class="tarjeta-enlace">
       <div class="tarjeta-fondo">
         <picture class="tarjeta-fondo-picture">
           <source srcset="../../assets/img/casamiento.jpg" type="image/png">
@@ -28,7 +28,7 @@
   </div>
 
   <div class="tarjeta">
-    <a [routerLink]="['/extras']" class="tarjeta-enlace">
+    <a [routerLink]="['/servicios', 'extras']" class="tarjeta-enlace">
       <div class="tarjeta-fondo">
         <picture class="tarjeta-fondo-picture">
           <source srcset="assets/img/extras2.avif" type="image/avif">
